add notebook routes
