# main.js
@@ -1,5 +1,7 @@
 const express = require('express');
 const mongoose = require('mongoose');
+const Joi = require('@hapi/joi');
+Joi.objectId = require('joi-objectid')(Joi);
 const cors = require('cors');
 require('express-async-errors');
 const swaggerUi = require("swagger-ui-express");
@@ -7,6 +9,7 @@ const YAML = require("yamljs");
 const swaggerDocument = YAML.load("./swagger.yaml");
 const processors = require('./routes/processorRoutes');
 const brands = require('./routes/brandRoutes');
+const notebooks = require('./routes/notebookRoutes');
 const app = express();
 
 mongoose
@@ -18,6 +21,7 @@ app.use(cors());
 app.use(express.json());
 app.use('/api/processors', processors);
 app.use('/api/brands', brands);
+app.use('/api/notebooks', notebooks);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const port = process.env.PORT || 8000;
